test/parse/empty-file.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
;; empty file
(;; STDERR ;;;
out/test/parse/empty-file.txt:4:1: error: unexpected token "EOF", expected a module field or a module.
;;; STDERR ;;)
